# image-harvest

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
extract_images/: __init__.py  cli.py  core.py  extractors.py  gui.py  models.py  quality.py  reporting.py
tests/: test_core.py  test_quality.py
